modules/gdscript/tests/scripts/analyzer/errors/aabb_index_int.gd
func test():
	var a: AABB = AABB()
	print(a[0])
